allow config changes in code

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -36,7 +36,14 @@
    "source": [
     "with open('config.json') as json_config_file:\n",
     "    user_config = json.load(json_config_file)\n",
-    "    data_path = user_config.get('data_path', os.getcwd())"
+    "    data_path = user_config.get('data_path', os.getcwd())\n",
+    "\n",
+    "# uncomment to change a config\n",
+    "# user_config = {}\n",
+    "# user_config['data_path'] = r\"<your_path_here>\"\n",
+    "\n",
+    "# with open('config.json', 'w') as json_config_file:\n",
+    "#     json.dump(user_config, json_config_file)"
    ]
   },
   {
