allow config changes in code [updated]

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -38,7 +38,24 @@
     "    user_config = json.load(json_config_file)\n",
     "    data_path = user_config.get('data_path', os.getcwd())\n",
     "\n",
-    "# uncomment to change a config\n",
+    "# uncomment to change a config\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### uncomment to change a config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# user_config = {}\n",
     "# user_config['data_path'] = r\"<your_path_here>\"\n",
     "\n",
