allow config changes in code [fix typo]

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -36,16 +36,14 @@
    "source": [
     "with open('config.json') as json_config_file:\n",
     "    user_config = json.load(json_config_file)\n",
-    "    data_path = user_config.get('data_path', os.getcwd())\n",
-    "\n",
-    "# uncomment to change a config\n"
+    "    data_path = user_config.get('data_path', os.getcwd())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### uncomment to change a config"
+    "### change user config"
    ]
   },
   {
@@ -490,7 +488,7 @@
    },
    "outputs": [],
    "source": [
-    "{'train_acc': all_accs[1-1, 'test_acc': tests_accs[-1]}"
+    "{'train_acc': all_accs[-1], 'test_acc': tests_accs[-1]}"
    ]
   },
   {
