--- a/Model.ipynb
+++ b/Model.ipynb
@@ -21,7 +21,23 @@
     "import winsound\n",
     "import re \n",
     "from IPython import display\n",
-    "import html, string"
+    "import importlib\n",
+    "import html, string\n",
+    "import preprocess_twitter\n",
+    "from nltk.tokenize import TreebankWordTokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "importlib.reload(preprocess_twitter);"
    ]
   },
   {
@@ -41,16 +57,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "### change user config"
+    "change user config"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -72,7 +93,8 @@
    "outputs": [],
    "source": [
     "vocab_size=int(1.2e6)\n",
-    "embedding_dim=200"
+    "embedding_dim=200\n",
+    "assumed_max_length=70"
    ]
   },
   {
@@ -82,7 +104,7 @@
     "editable": true
    },
    "source": [
-    "### File paths"
+    "File paths"
    ]
   },
   {
@@ -96,7 +118,9 @@
    "outputs": [],
    "source": [
     "word_dict_file = open(os.path.join(data_path, r\"d\" + str(embedding_dim) +\"_word_embedding\", \"word_dict.pickle\"), 'rb')\n",
-    "word_dict = pickle.load(word_dict_file)"
+    "word_dict = pickle.load(word_dict_file)\n",
+    "word_dict2_file = open(os.path.join(data_path, r\"d\" + str(embedding_dim) +\"_word_embedding\", \"word_dict2.pickle\"), 'rb')\n",
+    "word_dict2 = pickle.load(word_dict2_file)"
    ]
   },
   {
@@ -135,6 +159,7 @@
    "source": [
     "tweets_indexed = []\n",
     "sentiments = []\n",
+    "sentiments_lists = []\n",
     "def remove_rt(txt):\n",
     "    txt = txt.replace('RT','')\n",
     "    return txt\n",
@@ -172,39 +197,63 @@
     "    return html.unescape(txt)\n",
     "\n",
     "def split_punctuations(txt):\n",
-    "    sub0 = re.sub(r\" *([^\\w ']) *\", r' \\1 ', txt)\n",
+    "    sub0 = re.sub(r\" *([^\\w <>']) *\", r' \\1 ', txt)\n",
     "    return re.sub(r\"(((^|(?<=\\s))')|('($|(?=\\s))))\", r' \\1 ', sub0)\n",
     "#     return re.sub(r\" *([^\\w ]) *\", r' \\1 ', txt)\n",
     "\n",
+    "def split_others(text):\n",
+    "    text = re.sub(r\" *([’.+…]) *\", r' \\1 ', text)\n",
+    "    return text\n",
+    "\n",
+    "def multiclass_sentiment(line):\n",
+    "    sentiment_list = []\n",
+    "    for i in line[2:]:\n",
+    "        if i == '' or not i.isdigit() : continue\n",
+    "        sentiment_list.append(int(i) - 1)\n",
+    "    return sentiment_list\n",
+    "\n",
+    "tokenizer = TreebankWordTokenizer()\n",
     "def tweets_list_final(file_name, encoding):\n",
     "    tweets_file = open(file_name,\"r\",encoding=encoding)\n",
     "    tweets_csv_reader = csv.reader(tweets_file)\n",
-    "    init_tweet=np.array([-2 for _ in range(70)])\n",
+    "    init_tweet=np.array([-2 for _ in range(assumed_max_length)])\n",
     "    for line in tweets_csv_reader:\n",
     "        #if line == [] : continue\n",
-    "        if not line[2] : continue\n",
+    "        if len(line)<2 : continue\n",
     "        try :\n",
     "            sent = int(line[2])\n",
     "            sentiments.append(sent - 1)\n",
+    "            sentiments_lists.append(multiclass_sentiment(line)) \n",
     "            tweet_np = np.copy(init_tweet)\n",
     "            tweet = line[1]\n",
-    "            tweet1 = remove_rt(tweet)\n",
-    "            tweet1 = remove_link(tweet1)\n",
-    "            tweet1 = remove_mentions(tweet1)\n",
-    "            tweet1 = remove_repeated_chars(tweet1)\n",
-    "#             tweet1 = modify_lowercase_uppercase(tweet1) \n",
-    "            tweet1 = modify_all_lowercase(tweet1)\n",
+    "            tweets_unprocessed.append(tweet)\n",
+    "            \n",
+    "#             tweet1 = remove_rt(tweet)\n",
+    "#             tweet1 = remove_link(tweet1)\n",
+    "#             tweet1 = remove_mentions(tweet1)\n",
+    "#             tweet1 = remove_repeated_chars(tweet1)\n",
+    "# #             tweet1 = modify_lowercase_uppercase(tweet1) \n",
+    "#             tweet1 = modify_all_lowercase(tweet1)\n",
+    "#             tweet1 = unescape_html(tweet1)\n",
+    "#             tweet1 = split_punctuations(tweet1)\n",
+    "#             tweet1 = split_punctuations(tweet1)\n",
+    "#             tweet = tweet1.split()\n",
+    "        \n",
+    "            tweet1=preprocess_twitter.tokenize(tweet)\n",
     "            tweet1 = unescape_html(tweet1)\n",
-    "            tweet1 = split_punctuations(tweet1)\n",
-    "#             print(tweet)\n",
-    "            tweet = tweet1.split()\n",
+    "            tweet1 = split_others(tweet1)\n",
+    "            tweet1= tokenizer.tokenize(tweet1)\n",
+    "            tweet = tweet1\n",
+    "\n",
     "            tweets.append(tweet)\n",
     "            for i in range(len(tweet)) :\n",
-    "                tweet_np[i] = word_dict.get(tweet[i],-1)\n",
+    "#                 tweet_np[i] = word_dict.get(tweet[i],-1)\n",
+    "                tweet_np[i] = word_dict2.get(tweet[i],-1)\n",
+    "                if(tweet_np[i]==-1 and (tweet[i]==' ' or tweet[i]=='T')): print(tweet1)\n",
     "\n",
     "            tweets_indexed.append(tweet_np)\n",
     "        except ValueError as err: pass\n",
-    "    tweets_csv_reader.close(); tweets_file.close()"
+    "    tweets_file.close()"
    ]
   },
   {
@@ -218,6 +267,7 @@
    "outputs": [],
    "source": [
     "tweets = []\n",
+    "tweets_unprocessed = []\n",
     "tweets_indexed = []\n",
     "sentiments = []\n",
     "tweets_list_final(os.path.join(data_path, \"data_set0.csv\"), \"utf-8-sig\")\n",
@@ -249,9 +299,9 @@
    },
    "outputs": [],
    "source": [
-    "ch=tweets_np==-1\n",
-    "ch2=tweets_np>=-1\n",
-    "np.count_nonzero(ch)/np.count_nonzero(ch2)"
+    "unmatched_words=tweets_np==-1\n",
+    "all_words=tweets_np>=-1\n",
+    "print('unmatched words:', round(np.count_nonzero(unmatched_words)/np.count_nonzero(all_words), 5))"
    ]
   },
   {
@@ -291,7 +341,7 @@
    },
    "outputs": [],
    "source": [
-    "for i in range(70):\n",
+    "for i in range(assumed_max_length):\n",
     "    if np.all(tweets_np[:,i]==-2):\n",
     "        max_length=i+1; break; \n",
     "print('max_length:', max_length)"
@@ -327,7 +377,8 @@
    },
    "outputs": [],
    "source": [
-    "np.bincount(sents_np)"
+    "print('data set size:', len(sents_np))\n",
+    "print('sent counts:', np.bincount(sents_np))"
    ]
   },
   {
@@ -416,11 +467,11 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "iters=500; max_train=1200; max_test = 300\n",
+    "iters=10; max_train=1200; max_test = 300\n",
     "sess = tf.Session()\n",
     "sess.run(tf.global_variables_initializer())\n",
     "\n",
@@ -437,21 +488,26 @@
     "tests_accs = np.zeros(iters//5+1)\n",
     "for i in range(iters):\n",
     "    checkpoint = i if i%5 == 0 or i==iters-1 else None\n",
-    "    iter_result = np.zeros(max_train)\n",
-    "    iter_test_result = np.zeros(max_test)\n",
+    "    iter_train_result = np.zeros(max_train); final_train_probs = np.zeros((max_train, classes))\n",
+    "    iter_test_result = np.zeros(max_test); final_test_probs = np.zeros((max_test, classes))\n",
     "    for j in range(int(max_train/batch_size)):\n",
     "        np_inputs = tweets_embedded[j*batch_size:(j+1)*batch_size, :max_length]\n",
     "        np_targets = sents_np[j*batch_size:(j+1)*batch_size]\n",
-    "        if checkpoint:\n",
+    "        if checkpoint and i==iters-1:\n",
+    "            _, np_probs, np_results = sess.run([opt_op, probs, results], feed_dict={inputs: np_inputs, targets: np_targets})\n",
+    "            iter_train_result[j*batch_size:(j+1)*batch_size] = np_results\n",
+    "            final_train_probs[j*batch_size:(j+1)*batch_size] = np_probs\n",
+    "        elif checkpoint:\n",
     "            _, np_results = sess.run([opt_op, results], feed_dict={inputs: np_inputs, targets: np_targets})\n",
-    "            iter_result[j*batch_size:(j+1)*batch_size] = np_results\n",
+    "            iter_train_result[j*batch_size:(j+1)*batch_size] = np_results\n",
     "        else:\n",
     "            _ = sess.run([opt_op], feed_dict={inputs: np_inputs, targets: np_targets})\n",
     "\n",
     "    if checkpoint is None : continue\n",
     "    if i==iters-1: checkpoint+=1\n",
     "    checkpoint//=5\n",
-    "    checks = iter_result==sents_np[:max_train] \n",
+    "#     checks = iter_train_result==sents_np[:max_train] \n",
+    "    checks = np.fromiter(map(lambda i,j :i in j, iter_train_result, sentiments_lists[:max_train]), dtype=np.bool)\n",
     "    all_accs[i] = np.count_nonzero(checks)/checks.size\n",
     "    \n",
     "    #update plot\n",
@@ -464,9 +520,14 @@
     "    for test in range(int(max_test/batch_size)):\n",
     "        np_test_inputs = tweets_embedded[max_train + (test*batch_size):max_train + ((test+1)*batch_size), :num_steps]\n",
     "        np_test_targets = sents_np[max_train + (test*batch_size):max_train + ((test+1)*batch_size)]\n",
-    "        np_test_results, = sess.run([ results], feed_dict={inputs:  np_test_inputs, targets: np_test_targets})\n",
+    "        if i==iters-1:\n",
+    "            np_test_results, np_test_probs = sess.run([results, probs], feed_dict={inputs:  np_test_inputs, targets: np_test_targets})\n",
+    "            final_test_probs[(test*batch_size):((test+1)*batch_size)] = np_test_probs\n",
+    "        else:\n",
+    "            np_test_results, = sess.run([ results], feed_dict={inputs:  np_test_inputs, targets: np_test_targets})\n",
     "        iter_test_result[(test*batch_size):((test+1)*batch_size)] = np_test_results\n",
-    "    checks = iter_test_result==sents_np[max_train:max_train + max_test] \n",
+    "#     checks = iter_test_result==sents_np[max_train:max_train + max_test] \n",
+    "    checks = np.fromiter(map(lambda i,j :i in j, iter_test_result, sentiments_lists[max_train:max_train + max_test]), dtype=np.bool)\n",
     "    tests_accs[checkpoint] = np.count_nonzero(checks)/checks.size\n",
     "    plt.plot(x_axis,tests_accs[:(checkpoint)+1],label=\"test(bl=\" + str(test_baseline) + \")\")\n",
     "    plt.title('Accuracy')\n",
@@ -488,7 +549,7 @@
    },
    "outputs": [],
    "source": [
-    "{'train_acc': all_accs[-1], 'test_acc': tests_accs[-1]}"
+    "print('train_acc:', all_accs[-1], '  test_acc:', tests_accs[-1])"
    ]
   },
   {
@@ -508,13 +569,51 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "sent_map=['Happy','Love','Hopeful','Neutral','Angry','Hopeless','Hate','Sad']\n",
     "for i in range(max_test):\n",
-    "          if checks[i]==False: print(' '.join(tweets[max_train+i]), '>' , sent_map[int(iter_test_result[i])])"
+    "          if checks[i]==False:\n",
+    "            print(' '.join(tweets[max_train+i]), '\\n>' , sent_map[int(iter_test_result[i])], \">>\", [sent_map[j] for j in sentiments_lists[max_train+i]], '>>>', [float('{:.3}'.format(k)) for k in final_test_probs[i]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "unprocessed tweets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "sent_map=['Happy','Love','Hopeful','Neutral','Angry','Hopeless','Hate','Sad']\n",
+    "for i in range(max_test):\n",
+    "          if checks[i]==False:\n",
+    "            print(tweets_unprocessed[max_train+i], '\\n>' , sent_map[int(iter_test_result[i])], \">>\", [sent_map[j] for j in sentiments_lists[max_train+i]], '>>>', [float('{:.3}'.format(k)) for k in final_test_probs[i]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "saver = tf.train.Saver()\n",
+    "saver.save(sess, os.path.join(data_path, 'Sessions', 'i1500_CL_41TA', 'i1500_CL_41TA'))"
    ]
   }
  ],
