shuffle tweets once

--- a/Model Si.ipynb
+++ b/Model Si.ipynb
@@ -15,6 +15,7 @@
     "import pickle\n",
     "import csv, json\n",
     "import numpy as np\n",
+    "from random import shuffle\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "# %matplotlib notebook\n",
@@ -115,6 +116,7 @@
    "source": [
     "vocab_size=int(1.2e6)\n",
     "embedding_dim=200\n",
+    "classes = 8\n",
     "assumed_max_length=70"
    ]
   },
@@ -322,7 +324,6 @@
    },
    "outputs": [],
    "source": [
-    "classes = 8\n",
     "tweets = []\n",
     "tweets_unprocessed = []\n",
     "tweets_indexed = []\n",
@@ -332,6 +333,30 @@
     "tweets_list_final(os.path.join(data_path, \"data_set1.csv\"), \"utf-8-sig\")\n",
     "tweets_list_final(os.path.join(data_path, \"data_set2.csv\"), \"utf-8-sig\")\n",
     "#tweets_list_final(os.path.join(data_path, \"data_set_a0.csv\"), \"utf-8-sig\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "shuffle the tweets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "indices_shuffled = list(range(len(tweets)))\n",
+    "shuffle(indices_shuffled, lambda: 0)\n",
+    "tweets = [tweets[i] for i in indices_shuffled]\n",
+    "tweets_unprocessed = [tweets_unprocessed[i] for i in indices_shuffled]\n",
+    "tweets_indexed = [tweets_indexed[i] for i in indices_shuffled]\n",
+    "sentiments = [sentiments[i] for i in indices_shuffled]\n",
+    "sentiments_lists = [sentiments_lists[i] for i in indices_shuffled]"
    ]
   },
   {
@@ -581,7 +606,8 @@
     "    sess_name='TA{:.3}-{:.3}_{}_tr{}te{}_u{}l{}do{}d{}'.format(test_accs[-1], max(test_accs), iters_label, max_train, max_test, num_units, num_layers, drop_out, embedding_dim)\n",
     "    sess_folder = os.path.join(data_path, 'Sessions', sess_name)\n",
     "    if not os.path.exists(sess_folder): os.makedirs(sess_folder)\n",
-    "    saver.save(sess, os.path.join(sess_folder, iters_label))"
+    "    saver.save(sess, os.path.join(sess_folder, iters_label))\n",
+    "    shutil.copy2(os.path.join(os.getcwd(), 'Model Si.ipynb'), sess_folder)"
    ]
   },
   {
@@ -681,7 +707,7 @@
    },
    "outputs": [],
    "source": [
-    "iters=100;\n",
+    "iters=500;\n",
     "max_train=1600; max_test = 400;\n",
     "iters_label = \"ModelSi-PF-do0.0\"\n",
     "\n",
@@ -703,15 +729,15 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "start_time = time.time()\n",
     "\n",
-    "sess = tf.Session()\n",
-    "sess.run(tf.global_variables_initializer())\n",
-    "total_iters=0; session_init_time='UTC'+time.strftime(\"%y%m%d-%H%M%S\", time.gmtime())\n",
+    "# sess = tf.Session()\n",
+    "# sess.run(tf.global_variables_initializer())\n",
+    "# total_iters=0; session_init_time='UTC'+time.strftime(\"%y%m%d-%H%M%S\", time.gmtime())\n",
     "\n",
     "# saver = tf.train.Saver()\n",
     "# saver.restore(sess, os.path.join(data_path, \"d\"+ str(embedding_dim), \"_word_embedding\", \"TF_Variables\")\n",
