display and save overall_stats
overall_stats for all session runs including max_test_acc
log all iter_stats in one file with overall_stats
use a new baseline that better matches the accuracy measure

--- a/Model Si.ipynb
+++ b/Model Si.ipynb
@@ -525,10 +525,32 @@
    },
    "outputs": [],
    "source": [
+    "def pf_baseline(max_train, max_test):\n",
+    "    top_probs = np.zeros((3, classes))\n",
+    "    def baseline():\n",
+    "        baseline = 0\n",
+    "        for i in range(3): \n",
+    "            baseline = max(baseline, np.mean(np.sum(np.minimum(selected_sents, top_probs[i]), 1)))\n",
+    "    #     baseline = np.mean(np.sum(np.minimum(selected_sents, top=_probs[np.sum(selected_sents>0, 1)-1]), 1))\n",
+    "        return baseline\n",
+    "    \n",
+    "    selected_sents = sents_sc_np[0:max_train]\n",
+    "    top_indices = np.argsort(np.sum(selected_sents, 0))[::-1][:3]\n",
+    "    for i in range(3): top_probs[i, top_indices[:i+1]] = priority_probs[i]\n",
+    "    train_baseline = baseline()\n",
+    "    selected_sents = sents_sc_np[max_train: max_train+max_test]\n",
+    "    test_baseline = baseline() if max_test!=0 else 0\n",
+    "    return train_baseline, test_baseline\n",
+    "\n",
     "print('data set size:', len(sents_np))\n",
+    "mc_count = np.sum(np.sum(sents_mh_np, 1)>1)\n",
+    "print('multiclass: {}, {:.4}%'.format(mc_count, mc_count/len(sents_np)*100))\n",
     "print('sent counts:', np.bincount(sents_np))\n",
-    "top_3_baseline = sum(sorted(np.bincount(sents_np), reverse=True)[:3])/sum(np.bincount(sents_np))\n",
-    "print('top 3-classses per all: {:.3}'.format(top_3_baseline))"
+    "print('pf_baseline: {:.3}'.format(pf_baseline(-1, 0)[0]))\n",
+    "# top_3_baseline = np.sum(np.sort(np.bincount(sents_np))[::-1][:3])/np.sum(np.bincount(sents_np))\n",
+    "top_3_baseline = np.sum(np.sort(np.sum(sents_sc_np, 0))[::-1][:3])/np.sum(np.bincount(sents_np))\n",
+    "top_3_passing = np.count_nonzero(sents_mh_np[:, np.argsort(np.count_nonzero(sents_sc_np, 0))[::-1][:3]])/np.sum(np.bincount(sents_np))\n",
+    "print('top_3 classses per all: {:.3}, passing: {:.3}'.format(top_3_baseline, top_3_passing))"
    ]
   },
   {
@@ -561,52 +583,63 @@
     "    return (hours + minutes + seconds).strip()\n",
     "    \n",
     "def iters_stats():\n",
+    "    iters = 'iterations ({}:{}):\\n'.format(x_axis[0], x_axis[-1])\n",
     "    latest_acc = 'train_acc: {:.3}\\ttest_acc: {:.3}\\n'.format(train_accs[checkpoint], test_accs[checkpoint])\n",
     "    top_acc = 'top train_acc: {:.3}\\ttop test_acc: {:.3}\\n'.format(max(train_accs[:checkpoint+1]), max(test_accs[:checkpoint+1]))\n",
+    "    baseline = 'train_baseline: {:.3}\\ttest_baseline: {:.3}\\n'.format(train_baseline, test_baseline)\n",
     "    pass_test = 'passing test examples: {:.3}\\n'.format(np.mean(tests_acc>0.5))\n",
     "    test_acc2 = 'test_acc2: {:.3}\\ttop_test_acc2: {:.3}\\n'.format(test_accs2[checkpoint], max(test_accs2[:checkpoint+1]))\n",
     "    std_dev = 'standard deviation: {:.3}\\n'.format(np.mean(np.std(iter_test_result, 0)))\n",
     "    ex_time = \"execution time is {}\".format(sec2clock(end_time - start_time))\n",
-    "    return (latest_acc + top_acc + pass_test + test_acc2 + std_dev + ex_time)\n",
+    "    return (iters + latest_acc + top_acc + baseline + pass_test + test_acc2 + std_dev + ex_time)\n",
+    "\n",
+    "def overall_stats():\n",
+    "    total_exec_time = sec2clock(sum(exec_times, (end_time-start_time) if sess_running else 0))\n",
+    "    return 'all iterations:\\nmax_train_acc: {:.3}\\tmax_test_acc: {:.3}\\nmax_test_acc2: {:.3}\\ntotal execution time is {}'.format(max_train_acc, max_test_acc, max_test_acc2, total_exec_time)\n",
     "\n",
     "def iters_plot():\n",
     "    set_plot()\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
     "def set_plot():\n",
     "    plt.gca().cla() \n",
-    "    plt.plot(x_axis,train_accs[:(checkpoint)+1], label=\"train(bl=\" + str(train_baseline) + \")\")\n",
-    "    plt.plot(x_axis,test_accs[:(checkpoint)+1], label=\"test (bl=\" + str(test_baseline) + \")\")\n",
+    "    plt.plot(x_axis,train_accs[:(checkpoint)+1], label=\"train(bl=\" + '{:.3}'.format(train_baseline) + \")\")\n",
+    "    plt.plot(x_axis,test_accs[:(checkpoint)+1], label=\"test (bl=\" + '{:.3}'.format(test_baseline) + \")\")\n",
     "    plt.title('Accuracy at iterations ({}:{})'.format(x_axis[0], x_axis[-1]))\n",
     "    plt.legend(loc='best') #upper left    \n",
     "\n",
     "sent_map=['Happy','Love','Hopeful','Neutral','Angry','Hopeless','Hate','Sad']\n",
-    "def tweets_with_results(group ='wrong', processed = False):\n",
+    "def tweets_with_results(group ='wrong', processed = False, threshold = 0.5):\n",
     "    text = ''\n",
     "    for i in range(max_test):\n",
     "#         if tests_acc[i]==False:\n",
     "        item_acc = np.sum(tests_acc[i])/np.sum(sents_sc_np[max_train+i])\n",
     "        condition = True\n",
-    "        if group == 'wrong': condition = item_acc<0.5\n",
-    "        if group == 'correct': condition = item_acc>=0.5\n",
+    "        if group == 'wrong': condition = item_acc<threshold\n",
+    "        if group == 'correct': condition = item_acc>=threshold\n",
     "        if condition:\n",
     "            if processed: tweet_p = ' '.join(tweets[max_train+i])\n",
     "            else: tweet_p = tweets_unprocessed[max_train+i]\n",
     "            res_p=', '.join(['{}: {:.3}'.format(sent_map[l], iter_test_probs[i, l]) for l in np.argsort(iter_test_probs[i])[::-1][:3] if iter_test_probs[i, l]>0.01])\n",
     "            targets_p=', '.join([sent_map[j] for j in sentiments_lists[max_train+i]])\n",
-    "#             probs_p=[float('{:.3}'.format(k)) for k in iter_test_probs[i]]\n",
     "            text += tweet_p + '\\n> ' + res_p + \" >> \" + targets_p + '\\n'\n",
     "    return text\n",
     "\n",
     "def log_iters():\n",
+    "    if(sess_runs == len(sess_stats)): sess_stats[-1] = iters_stats(); exec_times[-1] = end_time-start_time\n",
+    "    else: sess_stats.append(iters_stats()); exec_times.append(end_time-start_time)\n",
+    "    \n",
     "    log_folder = os.path.join(data_path, 'log', \"{}_tr{}te{}_u{}l{}do{}d{}_{}\".format(iters_label, max_train, max_test, num_units, num_layers, drop_out, embedding_dim, session_init_time))\n",
     "    set_plot()\n",
     "    if not os.path.exists(log_folder): os.makedirs(log_folder)\n",
+    "    \n",
     "    log_file_name = os.path.join(log_folder, \"i{}-{}\".format(x_axis[0], x_axis[-1]))\n",
     "    plt.savefig(log_file_name + '.svg');\n",
     "    plt.savefig(log_file_name + '.png');\n",
     "    plt.close()\n",
     "    with open(log_file_name + '.txt', 'w') as log_file: log_file.write(iters_stats())\n",
+    "    all_stats = '{}\\n\\n{}'.format(overall_stats(), '\\n\\n'.join(sess_stats))\n",
+    "    with open(os.path.join(log_folder, 'all_i' + '.txt'), 'w') as log_file: log_file.write(all_stats)\n",
     "    with open(log_file_name + '_rejected.txt', 'w', encoding = 'utf-8') as log_file: log_file.write(tweets_with_results())\n",
     "    with open(log_file_name + '_approved.txt', 'w', encoding = 'utf-8') as log_file: log_file.write(tweets_with_results(group = 'correct'))\n",
     "    if iters==total_iters: shutil.copy2(os.path.join(os.getcwd(), 'Model Si.ipynb'), log_folder)\n",
@@ -712,7 +745,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -722,8 +755,10 @@
     "max_train=1600; max_test = 400;\n",
     "iters_label = \"ModelSi-RELU-PF\"\n",
     "\n",
-    "train_baseline=np.round(np.max(np.bincount(sents_np[:max_train]))/max_train, 3)\n",
-    "test_baseline=np.round(np.max(np.bincount(sents_np[max_train:max_train+max_test]))/max_test, 3)\n",
+    "# train_baseline=np.max(np.bincount(sents_np[:max_train]))/max_train\n",
+    "# test_baseline=np.max(np.bincount(sents_np[max_train:max_train+max_test]))/max_test\n",
+    "train_baseline, test_baseline = pf_baseline(max_train, max_test)\n",
+    "print('train_baseline: {:.3}, test_baseline: {:.3}'.format(train_baseline, test_baseline))\n",
     "\n",
     "train_accs = np.zeros(iters//5+1)\n",
     "test_accs = np.zeros(iters//5+1)\n",
@@ -750,13 +785,13 @@
     "# Uncomment the following block for a new session\n",
     "sess = tf.Session()\n",
     "sess.run(tf.global_variables_initializer())\n",
-    "total_iters, max_train_acc, max_test_acc, max_test_acc2 = 0, 0, 0, 0\n",
+    "total_iters, sess_runs, max_train_acc, max_test_acc, max_test_acc2 = 0, 0, 0, 0, 0; sess_stats, exec_times = [], []\n",
     "session_init_time='UTC'+time.strftime(\"%y%m%d-%H%M%S\", time.gmtime())\n",
     "\n",
     "# saver = tf.train.Saver()\n",
     "# saver.restore(sess, os.path.join(data_path, \"d\"+ str(embedding_dim), \"_word_embedding\", \"TF_Variables\")\n",
     "\n",
-    "x_axis=[]\n",
+    "x_axis=[]; sess_running = True\n",
     "for i in range(iters):\n",
     "    checkpoint = None\n",
     "    if (i+1)%5 == 0: checkpoint = (i+1)//5 \n",
@@ -811,17 +846,28 @@
     "    eta = (end_time - start_time)*(iters-i-1)/(i+1)\n",
     "    display.clear_output(wait=True)\n",
     "    display.display(plt.gcf())\n",
-    "    display.display_pretty(iters_stats(), raw=True)\n",
+    "    display.display_pretty(iters_stats(), overall_stats(), raw=True)\n",
     "    if i!=iters-1: display.display_pretty('ETA {}'.format(sec2clock(eta)), raw=True)\n",
     "    \n",
-    "total_iters+=iters\n",
+    "total_iters+=iters; sess_runs+=1; sess_running = False\n",
     "end_time=time.time()\n",
     "plt.close() # close the plot since it's already been displayed\n",
     "\n",
     "# iters_plot()\n",
-    "# print(iters_stats())\n",
+    "# print(iters_stats(), overall_stats(), sep='\\n\\n')\n",
     "log_iters()\n",
     "winsound.Beep(2500,500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "log_iters()"
    ]
   },
   {
