Use GRUs instead of LSTMs
using GRUs instead of LSTMs gave a little higher accuracy

--- a/Model Si.ipynb
+++ b/Model Si.ipynb
@@ -584,11 +584,11 @@
     "    \n",
     "def iters_stats():\n",
     "    iters = 'iterations ({}:{}):\\n'.format(x_axis[0], x_axis[-1])\n",
-    "    latest_acc = 'train_acc: {:.3}\\ttest_acc: {:.3}\\n'.format(train_accs[checkpoint], test_accs[checkpoint])\n",
+    "    latest_acc = 'train_acc: {:.3}  \\ttest_acc: {:.3}\\n'.format(train_accs[checkpoint], test_accs[checkpoint])\n",
     "    top_acc = 'top train_acc: {:.3}\\ttop test_acc: {:.3}\\n'.format(max(train_accs[:checkpoint+1]), max(test_accs[:checkpoint+1]))\n",
     "    baseline = 'train_baseline: {:.3}\\ttest_baseline: {:.3}\\n'.format(train_baseline, test_baseline)\n",
     "    pass_test = 'passing test examples: {:.3}\\n'.format(np.mean(tests_acc>0.5))\n",
-    "    test_acc2 = 'test_acc2: {:.3}\\ttop_test_acc2: {:.3}\\n'.format(test_accs2[checkpoint], max(test_accs2[:checkpoint+1]))\n",
+    "    test_acc2 = 'test_acc2: {:.3}  \\ttop_test_acc2: {:.3}\\n'.format(test_accs2[checkpoint], max(test_accs2[:checkpoint+1]))\n",
     "    std_dev = 'standard deviation: {:.3}\\n'.format(np.mean(np.std(iter_test_result, 0)))\n",
     "    ex_time = \"execution time is {}\".format(sec2clock(end_time - start_time))\n",
     "    return (iters + latest_acc + top_acc + baseline + pass_test + test_acc2 + std_dev + ex_time)\n",
@@ -638,18 +638,22 @@
     "    plt.savefig(log_file_name + '.png');\n",
     "    plt.close()\n",
     "    with open(log_file_name + '.txt', 'w') as log_file: log_file.write(iters_stats())\n",
-    "    all_stats = '{}\\n\\n{}'.format(overall_stats(), '\\n\\n'.join(sess_stats))\n",
+    "    save_path = ('\\n\\nsession save path:\\n' + sess_save_path) if sess_saved else ''\n",
+    "    all_stats = '{}{}{}'.format((overall_stats()+'\\n\\n') if True else '', '\\n\\n'.join(sess_stats), save_path)\n",
     "    with open(os.path.join(log_folder, 'all_i' + '.txt'), 'w') as log_file: log_file.write(all_stats)\n",
     "    with open(log_file_name + '_rejected.txt', 'w', encoding = 'utf-8') as log_file: log_file.write(tweets_with_results())\n",
     "    with open(log_file_name + '_approved.txt', 'w', encoding = 'utf-8') as log_file: log_file.write(tweets_with_results(group = 'correct'))\n",
     "    if iters==total_iters: shutil.copy2(os.path.join(os.getcwd(), 'Model Si.ipynb'), log_folder)\n",
     "        \n",
     "def save_session():\n",
+    "    global sess_save_path, sess_saved\n",
     "    saver = tf.train.Saver()\n",
     "    sess_name='TA{:.3}-{:.3}_{}_tr{}te{}_u{}l{}do{}d{}'.format(test_accs[-1], max_test_acc, iters_label, max_train, max_test, num_units, num_layers, drop_out, embedding_dim)\n",
     "    sess_folder = os.path.join(data_path, 'Sessions', sess_name)\n",
     "    if not os.path.exists(sess_folder): os.makedirs(sess_folder)\n",
-    "    saver.save(sess, os.path.join(sess_folder, iters_label))\n",
+    "    sess_save_path = saver.save(sess, os.path.join(sess_folder, iters_label))\n",
+    "    sess_saved = True\n",
+    "    log_iters()\n",
     "    shutil.copy2(os.path.join(os.getcwd(), 'Model Si.ipynb'), sess_folder)"
    ]
   },
@@ -703,7 +707,9 @@
     "softmax_w = tf.Variable(tf.random_uniform((num_units, classes), 0.0001, 0.001))\n",
     "softmax_b = tf.Variable(tf.random_uniform((classes,), 0.0001, 0.001))\n",
     "\n",
-    "cell = rnn.BasicLSTMCell(num_units)\n",
+    "# cell = rnn.BasicLSTMCell(num_units)\n",
+    "# cell = rnn.GRUCell(num_units, activation=tf.nn.relu)\n",
+    "cell = rnn.GRUCell(num_units)\n",
     "cell_m = tf.contrib.rnn.MultiRNNCell([cell] * num_layers)\n",
     "all_outputs, final_states = tf.nn.dynamic_rnn(cell_m, inputs_c, dtype=tf.float32)\n",
     "outputs = all_outputs[:,-1]\n",
@@ -753,12 +759,12 @@
    "source": [
     "iters=100;\n",
     "max_train=1600; max_test = 400;\n",
-    "iters_label = \"ModelSi-RELU-PF\"\n",
+    "iters_label = \"ModelSi-GRU-T-RELU-PF\"\n",
     "\n",
     "# train_baseline=np.max(np.bincount(sents_np[:max_train]))/max_train\n",
     "# test_baseline=np.max(np.bincount(sents_np[max_train:max_train+max_test]))/max_test\n",
     "train_baseline, test_baseline = pf_baseline(max_train, max_test)\n",
-    "print('train_baseline: {:.3}, test_baseline: {:.3}'.format(train_baseline, test_baseline))\n",
+    "print('train_baseline: {:.3}\\ttest_baseline: {:.3}'.format(train_baseline, test_baseline))\n",
     "\n",
     "train_accs = np.zeros(iters//5+1)\n",
     "test_accs = np.zeros(iters//5+1)\n",
@@ -786,7 +792,7 @@
     "sess = tf.Session()\n",
     "sess.run(tf.global_variables_initializer())\n",
     "total_iters, sess_runs, max_train_acc, max_test_acc, max_test_acc2 = 0, 0, 0, 0, 0; sess_stats, exec_times = [], []\n",
-    "session_init_time='UTC'+time.strftime(\"%y%m%d-%H%M%S\", time.gmtime())\n",
+    "session_init_time='UTC'+time.strftime(\"%y%m%d-%H%M%S\", time.gmtime()); sess_saved = False\n",
     "\n",
     "# saver = tf.train.Saver()\n",
     "# saver.restore(sess, os.path.join(data_path, \"d\"+ str(embedding_dim), \"_word_embedding\", \"TF_Variables\")\n",
@@ -846,7 +852,7 @@
     "    eta = (end_time - start_time)*(iters-i-1)/(i+1)\n",
     "    display.clear_output(wait=True)\n",
     "    display.display(plt.gcf())\n",
-    "    display.display_pretty(iters_stats(), overall_stats(), raw=True)\n",
+    "    display.display_pretty(iters_stats(), overall_stats() if total_iters>=iters else None, raw=True)\n",
     "    if i!=iters-1: display.display_pretty('ETA {}'.format(sec2clock(eta)), raw=True)\n",
     "    \n",
     "total_iters+=iters; sess_runs+=1; sess_running = False\n",
