--- a/Model Si.ipynb
+++ b/Model Si.ipynb
@@ -588,7 +588,7 @@
     "    top_acc = 'top train_acc: {:.3}\\ttop test_acc: {:.3}\\n'.format(max(train_accs[:checkpoint+1]), max(test_accs[:checkpoint+1]))\n",
     "    baseline = 'train_baseline: {:.3}\\ttest_baseline: {:.3}\\n'.format(train_baseline, test_baseline)\n",
     "    pass_test = 'passing test examples: {:.3}\\n'.format(np.mean(tests_acc>0.5))\n",
-    "    test_acc2 = 'test_acc2: {:.3}  \\ttop_test_acc2: {:.3}\\n'.format(test_accs2[checkpoint], max(test_accs2[:checkpoint+1]))\n",
+    "    test_acc2 = 'test_acc2: {:.3}  \\ttop_test_acc2: {:.3} at the {}th step \\n'.format(test_accs2[checkpoint], max(test_accs2[:checkpoint+1]), (np.argmax(test_accs2[:checkpoint+1])+1)*5 )\n",
     "    std_dev = 'standard deviation: {:.3}\\n'.format(np.mean(np.std(iter_test_result, 0)))\n",
     "    ex_time = \"execution time is {}\".format(sec2clock(end_time - start_time))\n",
     "    return (iters + latest_acc + top_acc + baseline + pass_test + test_acc2 + std_dev + ex_time)\n",
@@ -939,7 +939,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
