display absolute top test_acc2 step, fix typo

--- a/Model Si.ipynb
+++ b/Model Si.ipynb
@@ -588,7 +588,7 @@
     "    top_acc = 'top train_acc: {:.3}\\ttop test_acc: {:.3}\\n'.format(max(train_accs[:checkpoint+1]), max(test_accs[:checkpoint+1]))\n",
     "    baseline = 'train_baseline: {:.3}\\ttest_baseline: {:.3}\\n'.format(train_baseline, test_baseline)\n",
     "    pass_test = 'passing test examples: {:.3}\\n'.format(np.mean(tests_acc>0.5))\n",
-    "    test_acc2 = 'test_acc2: {:.3}  \\ttop_test_acc2: {:.3} at the {}th step \\n'.format(test_accs2[checkpoint], max(test_accs2[:checkpoint+1]), (np.argmax(test_accs2[:checkpoint+1])+1)*5 )\n",
+    "    test_acc2 = 'test_acc2: {:.3}  \\ttop_test_acc2: {:.3} at step {}\\n'.format(test_accs2[checkpoint], max(test_accs2[:checkpoint+1]), x_axis[np.argmax(test_accs2[:checkpoint+1])] )\n",
     "    std_dev = 'standard deviation: {:.3}\\n'.format(np.mean(np.std(iter_test_result, 0)))\n",
     "    ex_time = \"execution time is {}\".format(sec2clock(end_time - start_time))\n",
     "    return (iters + latest_acc + top_acc + baseline + pass_test + test_acc2 + std_dev + ex_time)\n",
@@ -697,7 +697,7 @@
     "tf.reset_default_graph()\n",
     "tf.set_random_seed(0)\n",
     "use_dropout = tf.constant(True)\n",
-    "# embedding = tf.Variable(tf.constant(0, dtype=tf.float16, shape=(vocab_size, embedding_dim)), trainable=False, name='embedding')\n",
+    "# embedding = tf.Variable(tf.constant(0, dtype=tf.float32, shape=(vocab_size, embedding_dim)), trainable=False, name='embedding')\n",
     "inputs = tf.placeholder(tf.float32, (batch_size, num_steps, embedding_dim))\n",
     "inputs_d = tf.nn.dropout(inputs, 1-drop_out)\n",
     "inputs_c = tf.cond(use_dropout, lambda: inputs_d, lambda: inputs)\n",
@@ -794,8 +794,8 @@
     "total_iters, sess_runs, max_train_acc, max_test_acc, max_test_acc2 = 0, 0, 0, 0, 0; sess_stats, exec_times = [], []\n",
     "session_init_time='UTC'+time.strftime(\"%y%m%d-%H%M%S\", time.gmtime()); sess_saved = False\n",
     "\n",
-    "# saver = tf.train.Saver()\n",
-    "# saver.restore(sess, os.path.join(data_path, \"d\"+ str(embedding_dim), \"_word_embedding\", \"TF_Variables\")\n",
+    "# saver = tf.train.Saver({'embedding': embedding})\n",
+    "# saver.restore(sess, os.path.join(data_path, \"d\"+ str(embedding_dim) + \"_word_embedding\", \"TF_Variables\", \"Embedding\"))\n",
     "\n",
     "x_axis=[]; sess_running = True\n",
     "for i in range(iters):\n",
@@ -869,7 +869,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -939,7 +941,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
