fix shuffling of the tweets

--- a/Model Si.ipynb
+++ b/Model Si.ipynb
@@ -15,7 +15,7 @@
     "import pickle\n",
     "import csv, json\n",
     "import numpy as np\n",
-    "from random import shuffle\n",
+    "import random\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "# %matplotlib notebook\n",
@@ -355,7 +355,8 @@
    "outputs": [],
    "source": [
     "indices_shuffled = list(range(len(tweets)))\n",
-    "shuffle(indices_shuffled, lambda: 0)\n",
+    "random.seed(0)\n",
+    "random.shuffle(indices_shuffled)\n",
     "tweets = [tweets[i] for i in indices_shuffled]\n",
     "tweets_unprocessed = [tweets_unprocessed[i] for i in indices_shuffled]\n",
     "tweets_indexed = [tweets_indexed[i] for i in indices_shuffled]\n",
